--- a/mixelixir/package.json
+++ b/mixelixir/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
