--- a/mixelixir/package.json
+++ b/mixelixir/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "icons": "^1.0.0",
     "next": "12.0.10",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
   },
