--- a/mixelixir/package.json
+++ b/mixelixir/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "mongoose": "^6.2.4",
     "next": "12.0.10",
     "nodemon": "^2.0.15",
     "react": "17.0.2",
