--- a/mixelixir/package.json
+++ b/mixelixir/package.json
@@ -14,9 +14,14 @@
     "next": "12.0.10",
     "nodemon": "^2.0.15",
     "react": "17.0.2",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
+    "react-dnd-touch-backend": "^15.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.3.3"
+    "socket.io-client": "^4.4.1",
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.9.0",
