--- a/mixelixir/package.json
+++ b/mixelixir/package.json
@@ -19,6 +19,7 @@
     "react-dnd-touch-backend": "^15.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-jwt": "^1.1.4",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
