--- a/mixelixir/package.json
+++ b/mixelixir/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "framer-motion": "^6.2.8",
     "icons": "^1.0.0",
     "next": "12.0.10",
     "nodemon": "^2.0.15",
