--- a/mixelixir/package.json
+++ b/mixelixir/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@lottiefiles/react-lottie-player": "^3.4.2",
     "@mui/material": "^5.5.2",
     "axios": "^0.26.0",
     "framer-motion": "^6.2.8",
