--- a/mixelixir/package.json
+++ b/mixelixir/package.json
@@ -14,6 +14,7 @@
     "@lottiefiles/react-lottie-player": "^3.4.2",
     "@mui/material": "^5.5.2",
     "axios": "^0.26.0",
+    "bodymovin": "^4.13.0",
     "framer-motion": "^6.2.8",
     "icons": "^1.0.0",
     "next": "12.0.10",
